# MPI-rs

./: LICENSE  README.md
ipc/: Cargo.toml
ipc/src/: lib.rs
mpi1/: Cargo.toml
mpi1/src/: c_version.c  lib.rs  lib2.rs  lib3.rs  lib4.rs  loh.c  loh.h  main.rs  unsafe_version.rs
mpi2/: Cargo.toml
mpi2/src/: lib.rs  main.rs
