[package]
name = "mpi2"
version = "0.1.0"
authors = ["sv-97"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.18.0"
memmap = "0.7.0"
sysinfo = "0.15.0"
criterion = "0.3.3"
ipc-channel = "0.14.1"
derive-new = "0.5.8"